fix whitespace on html load.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,6 +19,9 @@
   width: 1px;
 } */
 
+html {
+  background-color: #2c2c30;
+}
 
 .titleCardFade {
   transition-timing-function: ease-in;
